--- a/home1.html
+++ b/home1.html
@@ -8,7 +8,7 @@
 <body>
     <div id="vung1">
         <p>Thanh điều hướng</p>
-        <img src="a8fde0e12759ab07f248.jpg" alt="Ảnh nền">
+        <img src="vo.jpg" alt="Ảnh nền">
     </div>
 
     <div id="vung2">
