--- a/home1.html
+++ b/home1.html
@@ -1,26 +1,15 @@
-<!DOCTYPE html>
-<html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <title>Home HTML</title>
-    <link rel="stylesheet" href="style.css">
-</head>
 <body>
+    <link rel="stylesheet" href="style.css">
     <div id="vung1">
-        <p>Thanh điều hướng</p>
-        <img src="vo.jpg" alt="Ảnh nền">
+        <p> TRANG XINH GAI</p>
+        <p><img src="613774c6-lieu-nhac-cua-son-tung-m-tp-con-gay-suc-hut-voi-khan-gia.jpg"></p>
     </div>
-
     <div id="vung2">
-        <p>Vùng nội dung</p>
-        <p>Một số nội dung</p>
+        <p> TRANG FF</p>
+        <p>TRANG LQ</p>
     </div>
-
     <div id="vung3">
-        <div class="vung_con">
-            <p>Vùng chân trang / Footer</p>
-            <p>Nội dung chân trang</p>
-        </div>
+        <p>TRANG FF</p>
+        <P>TRANG LQ</P>
     </div>
 </body>
-</html>
