--- a/home1.html
+++ b/home1.html
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="style.css">
     <div id="vung1">
         <p> TRANG XINH GAI</p>
-        <p><img src="613774c6-lieu-nhac-cua-son-tung-m-tp-con-gay-suc-hut-voi-khan-gia.jpg"></p>
+        <p><img src="vo.jpg"></p>
     </div>
     <div id="vung2">
         <p> TRANG FF</p>
