--- a/home1.html
+++ b/home1.html
@@ -1,15 +1,95 @@
 <body>
     <link rel="stylesheet" href="style.css">
     <div id="vung1">
-        <p> TRANG XINH GAI</p>
-        <p><img src="vo.jpg"></p>
+        <p>Quý Lọ</p>
+        <p><img src="613774c6-lieu-nhac-cua-son-tung-m-tp-con-gay-suc-hut-voi-khan-gia.jpg"></p>
+        <div id="vung1-menu"><p> <a href="https://soclo-cpu.github.io/dichvuu/">Dịch Vụ.</a></p>
+        <p><a href="https://soclo-cpu.github.io/thongtin/">Thông Tin.</a></p>
+        <p><a href="https://soclo-cpu.github.io/trangchu/">Trang Chủ.</a></p>
     </div>
-    <div id="vung2">
-        <p> TRANG FF</p>
-        <p>TRANG LQ</p>
-    </div>
+ <div id="vung2">
+     <table class="score-table">
+    <thead>
+      <tr>
+        <th rowspan="2">STT</th>
+        <th rowspan="2">Tên</th>
+        <th colspan="3" class="diem-header">Điểm</th>
+      </tr>
+      <tr>
+        <th>Toán</th>
+        <th>Văn</th>
+        <th>Sử</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>TIẾN PHÁT Lọ</td>
+        <td>0.1</td>
+        <td>0.5</td>
+        <td>0.25</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>PHÁT GAY</td>
+        <td>8</td>
+        <td>9</td>
+        <td>10</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>PHÁT YÊU T</td>
+        <td>100</td>
+        <td>1000</td>
+        <td>100000</td>
+      </tr>
+    </tbody>
+  </table>
+    <div class="form-box">
+
+  <div class="form-row">
+    <label>Tên:</label>
+    <input type="text" class="form-input">
+  </div>
+
+  <div class="form-row">
+    <label>Email:</label>
+    <input type="email" class="form-input">
+  </div>
+
+  <div class="form-row">
+    <label>Quốc gia:</label>
+    <select>
+      <option>Việt Nam</option>
+      <option>Nga</option>
+      <option>Nhật Bản</option>
+      <option>Hàn Quốc</option>
+      <option>Phần Lan</option>
+    </select>
+  </div>
+
+  <div class="form-row">
+    <label>Sở thích:</label>
+  </div>
+
+  <div class="checkbox-row">
+    <input type="checkbox" id="doc">
+    <label for="doc">Đi Ngủ</label>
+  </div>
+
+  <div class="checkbox-row">
+    <input type="checkbox" id="nghe">
+    <label for="nghe">BẮN FF ĐI</label>
+  </div>
+
+  <div class="btn-box">
+    <button class="btn">Đăng Nhập</button>
+    <button class="btn">Thoát</button>
+  </div>
+</div>
+	</div>
     <div id="vung3">
-        <p>TRANG FF</p>
-        <P>TRANG LQ</P>
+        <p>Lạc Trôi</p>
+        <P>Chạy Ngay Đi</P>
     </div>
 </body>
