--- a/home1.html
+++ b/home1.html
@@ -1,7 +1,7 @@
 <body>
     <link rel="stylesheet" href="style.css">
     <div id="vung1">
-        <p>Quý Lọ</p>
+        <p>PHAT Lọ</p>
         <p><img src="613774c6-lieu-nhac-cua-son-tung-m-tp-con-gay-suc-hut-voi-khan-gia.jpg"></p>
         <div id="vung1-menu"><p> <a href="https://soclo-cpu.github.io/dichvuu/">Dịch Vụ.</a></p>
         <p><a href="https://soclo-cpu.github.io/thongtin/">Thông Tin.</a></p>
