Update image source in home1.html

--- a/home1.html
+++ b/home1.html
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="style.css">
     <div id="vung1">
         <p>PHAT Lọ</p>
-        <p><img src="613774c6-lieu-nhac-cua-son-tung-m-tp-con-gay-suc-hut-voi-khan-gia.jpg"></p>
+        <p><img src="vo.jpg"></p>
         <div id="vung1-menu"><p> <a href="https://soclo-cpu.github.io/dichvuu/">Dịch Vụ.</a></p>
         <p><a href="https://soclo-cpu.github.io/thongtin/">Thông Tin.</a></p>
         <p><a href="https://soclo-cpu.github.io/trangchu/">Trang Chủ.</a></p>
